src/logs/slurm-18754012.out
# conda environments:
#
local                 *  /users/PAA0023/mason1099/.conda/envs/local
base                     /usr/local/python/3.6-conda5.2

/users/PAA0023/mason1099/.conda/envs/local/bin/python
2022-04-18 12:09:24.357490: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudart.so.11.0
Traceback (most recent call last):
  File "run_tf_vae.py", line 15, in <module>
    from utils import load_data, train_test_split_balanced
  File "/users/PAA0023/mason1099/VAE_shape_variation/src/utils.py", line 144
    def train_test_split_balanced(x, y, test_size=0.2, img_size, is_flatten=True):
                                 ^
SyntaxError: non-default argument follows default argument
